# textQuerry-telegram-bot-rust

./: .gitignore  BOT_DESCRIPTION.md  Cargo.toml  LICENSE  README.md  SETUP.md
src/: api_client.rs  bot.rs  config.rs  handlers.rs  main.rs  menu.rs  utils.rs
